
December 2, 2010
----------------
#935322 by Michelle: Fixed node add links being relative.
#935322 by Michelle: Fixed unclosed 'a' causing wonkiness.
NOISSUE by Michelle: Fixed missing t() on View Forums tab.
#868942 by Michelle, WorldFallz: Added CSS for image-less button to boxy. More of an example than anything at this point as it's likely to be changed.
#868942 by Michelle Removed all language dependent button images.

November 17, 2010
-----------------
#559536 by troky, Michelle: Fixed $vars/$variables mixup in the topic list view include and removed the extra <br> from the last author field rewrite that had been compensating.
#831364 by Michelle, Heine: Reverted changing form alter paramater to pass by value that shouldn't have been done.

November 16, 2010
-----------------
NOISSUE by Michelle: Removed unneeded CSS left over from before Views was a dependency.
#868942 by Michelle: Changed new content links to use divs instead of a link and added button code.
#935322 by Michelle: Moved what was 'secondary links' into a 'forum tools' jump menu.
#935322 by Michelle: Switched tabs to being on by default.
#868942 by Michelle: Changed to new HTML for buttonized links, removed old CSS, and replaced with skeleton CSS.
#868942 by Michelle: Added jump to top button to the list of buttonized links.

November 14, 2010
-----------------
#933862 by Michelle: Restored compatability with the Comment Edited module that was inadvertantly lost.

October 14, 2010
----------------
#868942 by Michelle: Redid image handling on pseudo buttons to use background image with actual text on top instead of image replacement.

October 8, 2010
---------------
#933862 by Michelle: Added 'last edited' note based on node revisions. Changed Commented Edited integration to make use of new variable.
NOISSUE by Michelle: Fixed missing print statement around unpublished post note.

October 4, 2010
---------------
#905860 by Michelle: Ensure advanced_forum_get_forum_types returns an array()