@@ -137,8 +137,73 @@ span.topic-icon {
   display: block;
 }
 
-/* BUTTONIZED LINKS ********************************************************/
+/* BUTTONIZED LINKS - CSS ONLY METHOD ***************************************/
 
+/* CSS only buttonizing via http://css-tricks.com/examples/ButtonMaker */
+a.af-button-large,
+a.af-button-large:link, 
+a.af-button-large:visited,
+a.af-button-small,
+a.af-button-small:link, 
+a.af-button-small:visited {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.af-button-large,
+.af-button-small {
+  border-top: 1px solid #e5e5e5;
+  background: #b5b5b5;
+  background: -webkit-gradient(linear, left top, left bottom, from(#cccccc), to(#b5b5b5));
+  background: -moz-linear-gradient(top, #cccccc, #b5b5b5);
+  padding: 5px 10px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  box-shadow: rgba(0,0,0,1) 0 1px 0;
+  text-shadow: rgba(0,0,0,.4) 0 1px 0;
+  color: #ffffff;
+  font-size: 14px;
+  font-family: Georgia, serif;
+  text-decoration: none;
+  vertical-align: middle;
+}
+
+.af-button-small {
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+  -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  box-shadow: rgba(0,0,0,1) 0 1px 0;
+  text-shadow: rgba(0,0,0,.4) 0 1px 0;
+  font-size: 10px;
+}
+   
+a.af-button-large:hover,
+.af-button-small:hover {
+   border-top-color: #999999;
+   background: #999999;
+   color: #ffffff;
+}
+   
+a.af-button-large:active,
+.af-button-small:active {
+  color: #ffffff;
+   border-top-color: #999999;
+   background: #999999;
+}
+
+
+
+
+/* BUTTONIZED LINKS - IMAGE BACKGROUND METHOD ******************************/
+
+/* NOTE: This is currently just a skeleton as it is waiting on someone who
+   knows CSS better than me to get everything working cross browser. */
+   
 /*** General buttonized links CSS */
 
 /* The button class is on the 'a'. */
@@ -233,42 +298,3 @@ span.topic-icon {
 }
 
 
-/* CSS only buttonizing via http://css-tricks.com/examples/ButtonMaker */
-a.af-button-large,
-a.af-button-large:link, 
-a.af-button-large:visited {
-  color: #ffffff;
-  text-decoration: none;
-}
-
-.af-button-large {
-   border-top: 1px solid #c5d0d6;
-   background: #575d61;
-   background: -webkit-gradient(linear, left top, left bottom, from(#8f8f8f), to(#575d61));
-   background: -moz-linear-gradient(top, #8f8f8f, #575d61);
-   padding: 5px 10px;
-   -webkit-border-radius: 8px;
-   -moz-border-radius: 8px;
-   border-radius: 8px;
-   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   box-shadow: rgba(0,0,0,1) 0 1px 0;
-   text-shadow: rgba(0,0,0,.4) 0 1px 0;
-   color: white;
-   font-size: 14px;
-   font-family: Helvetica, Arial, Sans-Serif;
-   text-decoration: none;
-   vertical-align: middle;
-}
-   
-a.af-button-large:hover {
-   border-top-color: #b3b3b3;
-   background: #b3b3b3;
-   color: #616161;
-}
-   
-a.af-button-large:active {
-  color: #ffffff;
-  border-top-color: #a3a6a8;
-  background: #a3a6a8;
-}
