@@ -8,7 +8,8 @@ December 2, 2010
 #935322 by Michelle: Fixed unclosed 'a' causing wonkiness.
 NOISSUE by Michelle: Fixed missing t() on View Forums tab.
 #868942 by Michelle, WorldFallz: Added CSS for image-less button to boxy. More of an example than anything at this point as it's likely to be changed.
-#868942 by Michelle Removed all language dependent button images.
+#868942 by Michelle: Removed all language dependent button images.
+#868942 by Michelle: Added small AF buttons to boxy CSS only example and made the colors a bit better.
 
 November 17, 2010
 -----------------
